# cute

./: # Code Citations.md  .gitignore  Cargo.toml  IMPLEMENTATION.md  IMPLEMENTATION_ROADMAP.md  README.md  idea.md  journey-visualizer.mts  journey-visualizer.ts  mcp-client.ts  mcp.json  mvp-demo.mts  mvp-demo.ts  overlay.mts  overlay.ts  package-lock.json  package.json  quickstart.ps1  quickstart.sh  terminal-ui.tsx  tests.mts  tracer.mts  tsconfig.json  weather.mts  weather.ts
.github/: copilot-instructions.md  labels.yml
.github/ISSUE_TEMPLATE/: config.yml  phase-a-skeleton.md  phase-b-ui-ux.md  phase-c-features.md  phase-d-testing-distribution.md
.github/workflows/: release.yml
src/: main.rs  overlay.rs  visualizer.rs  weather.rs
