[package]
name = "custom_terminal"
version = "0.1.0"
edition = "2021"

description = "A modern, graphical, weather-aware Linux terminal for power users."

[dependencies]
vte = "0.13"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
